# blackJack

./: CMakeLists.txt  Main.qml  Sooss.qml  Test1.qml  card.cpp  card.h  dealer.cpp  dealer.h  deck.cpp  deck.h  game.cpp  game.h  main.cpp  participant.cpp  participant.h  player.cpp  player.h  resources.qrc  skin.cpp  skin.h  sound.cpp  sound.h  source.qrc
